overflow-clip-margin: content-box. Error fixed

--- a/style.css
+++ b/style.css
@@ -26,10 +26,13 @@ h1 {
   padding: 100px 0;
   padding-left: 0%;
   padding-right: 0%;
-  margin-top: 0%;
+  margin-top: 20px;
   margin-left: 0%;
   margin-right: 0%;
   margin-bottom: 0%;
+  border-style: none;
+  width: auto;
+  height: auto;
 }
 
 h2 {
@@ -67,7 +70,6 @@ h4 {
 }
 
 img {
-    overflow-clip-margin: content-box;
     overflow: clip;
 }
 
@@ -85,6 +87,7 @@ a {
   background-color: lightgray;
   color: black;
   cursor: pointer;
+  letter-spacing: 0;
 }
 
 title {
@@ -109,6 +112,8 @@ nav {
   font-size: 30px;
   margin-left: 0%;
   margin-right: 0%;
+  padding-left: 80px;
+  display: block;
 }
 
 .product {
@@ -124,3 +129,28 @@ nav {
   height: auto;
 }
 
+header {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-position: 50px 50px;
+  margin-left: 0%;
+  margin-right: 0%;
+}
+
+ul {
+  list-style-type: disc;
+}
+
+.first {
+  text-align: left;
+}
+
+.second {
+  text-align: center;
+}
+
+
+.third {
+  text-align: right;
+}
